gcc/testsuite/rust/rustc/ui/feature-gates/feature-gate-extern_types_dg.rs
extern "C" {
    type T; // { dg-error ".E0658." "" { target *-*-* } }
}

fn main() {}

